--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgriAssist</title>
+    <title>AgroAssist</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="styles.css" rel="stylesheet">
@@ -11,11 +11,11 @@
 
 <body class="min-h-screen bg-gradient-to-b from-green-100 to-green-200 font-sans flex flex-col">
     <div id="animation-overlay" class="fixed inset-0 bg-green-600 z-50 flex items-center justify-center">
-        <h1 id="animation-text" class="text-white text-6xl font-bold tracking-wider">AgriAssist</h1>
+        <h1 id="animation-text" class="text-white text-6xl font-bold tracking-wider">AgroAssist</h1>
     </div>
     <nav class="bg-green-700 dark:bg-gray-800 text-white p-4 shadow-md fixed w-full z-50">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold">AgriAssist</a>
+            <a href="#" class="text-2xl font-bold">AgroAssist</a>
             <div class="flex items-center space-x-6">
                 <ul class="flex space-x-6">
                     <li><a href="#home" class="hover:text-green-200 transition-colors duration-300">Home</a></li>
@@ -32,13 +32,13 @@
     </nav>
 
     <header id="home" class="bg-gradient-to-r from-green-600 to-green-700 dark:from-gray-700 dark:to-gray-800 text-white p-6 text-center shadow-lg mt-16">
-        <h1 class="text-4xl font-bold fade-in">AgriAssist</h1>
+        <h1 class="text-4xl font-bold fade-in">AgroAssist</h1>
         <p class="text-lg fade-in">Empowering Farmers with Real-time Information</p>
     </header>
 
     <main class="container mx-auto p-6 space-y-8 flex-grow">
     <section id="welcome" class="bg-gradient-to-r from-green-500 to-green-600 dark:from-gray-600 dark:to-gray-700 text-white p-8 rounded-lg shadow-md fade-in">
-        <h2 class="text-3xl font-bold mb-4">Welcome to AgriAssist</h2>
+        <h2 class="text-3xl font-bold mb-4">Welcome to AgroAssist</h2>
         <p class="text-lg mb-6">Get real-time market data, accurate weather forecasts, and expert agricultural advice all in one place!</p>
         <button class="bg-white text-green-600 dark:bg-gray-800 dark:text-green-400 px-6 py-2 rounded-lg font-semibold hover:bg-green-100 dark:hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:scale-105">
             Get Started
@@ -171,7 +171,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h3 class="text-xl font-semibold mb-4">About AgriAssist</h3>
+                    <h3 class="text-xl font-semibold mb-4">About AgroAssist</h3>
                     <p class="text-sm">Empowering farmers with real-time information, market insights, and expert advice to enhance agricultural productivity.</p>
                 </div>
                 <div>
@@ -203,7 +203,7 @@
                 </div>
             </div>
             <div class="mt-8 pt-8 border-t border-green-700 text-center">
-                <p>&copy; 2024 AgriAssist | All rights reserved.</p>
+                <p>&copy; 2024 AgroAssist | All rights reserved.</p>
             </div>
         </div>
     </footer>
